--- a/Styles/header.css
+++ b/Styles/header.css
@@ -82,7 +82,7 @@
     }
     .languages—container{
     
-        margin-left: 47vw;
+        margin-left: 50vw;
         width: 9.5vw;
         margin-top: 2vw;
     }
